web: adjust stop button style interactions with dialogues and many engine controls
- a dialog starts at the top, but has a padding to fit the stop button in.
-> fixes lower part of dialog being cut off
- z-index is on button instead of container
-> together with above change, only the button isn't affected by the backdrop filter (rather than the whole top bar)
- engine carousel is limited to screen width and scrolls (rather than scrolling the whole page)
-> stop button stays centered when carousel gets wider than screen
-> no more sideways scrolling when dialog hides the content behind

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -97,6 +97,8 @@ button:disabled {
 
 .dialog {
     position: fixed;
+    top: 0px;
+    padding-top: 68px;
     width: 100vw;
     height: 100vh;
     z-index: 10;
@@ -112,6 +114,8 @@ button:disabled {
     background-color: var(--background-primary);
     margin: var(--padding);
     padding: var(--padding);
+    max-height: calc(100dvh - 2 * var(--padding) - 68px);
+    overflow-y: auto;
 }
 
 article {
